gcc/testsuite/rust/rustc/ui/pub/pub-restricted-error-fn.rs
pub(crate) () fn foo() {} // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } .-1 }

